[package]
name = "bevy_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bevy = {version="0.13.0", default-features = false, features = ["dynamic_linking"]}
tokio = "1.36.0"

[profile.dev]
opt-level = 2